# ocaml_intrinsics_kernel

./: README.md  ocaml_intrinsics_kernel.opam
bench/: bench.ml  dune
src/: common.ml  common.mli  conditional.ml  conditional_stubs.c  csel_value.c  dune  emu.ml  emu.mli  float.ml  float.mli  float_stubs.c  int.ml  int.mli  int32.ml  int32.mli  int64.ml  int64.mli  int_stubs.c  naive_ints.ml  naive_ints.mli  nativeint.ml  nativeint.mli  ocaml_intrinsics_kernel.ml  runtime.c  runtime.js  runtime.wat
test/: dune  import.ml  ocaml_intrinsics_kernel_test.ml  test_clz.ml  test_csel.ml  test_ctz.ml  test_float.ml  test_popcnt.ml  test_shifts.ml
