(library
 (name ocaml_intrinsics_kernel_test)
 (preprocessor_deps config.h)
 (libraries ocaml_intrinsics_kernel ppx_bench.runtime-lib ppx_expect.runtime
   ppx_module_timer.runtime)
 (preprocess
  (pps ppx_jane ppx_optcomp)))

(rule
 (targets config.h)
 (deps)
 (action
  (bash "cp %{lib:jst-config:config.h} .")))
