(library
 (name ocaml_intrinsics_kernel_test)
 (preprocessor_deps config.h)
 (flags :standard -extension layouts)
 (libraries int32_u int64_u nativeint_u ocaml_intrinsics_kernel
   ppx_bench.runtime-lib ppx_expect.runtime ppx_module_timer.runtime stdio)
 (preprocess
  (pps ppx_jane ppx_optcomp)))

(rule
 (targets config.h)
 (deps)
 (action
  (bash "cp %{lib:jst-config:config.h} .")))
