(library
 (name ocaml_intrinsics_kernel_test)
 (preprocessor_deps config.h)
 (flags :standard -extension layouts)
 (libraries unboxed.int32_u unboxed.int64_u unboxed.nativeint_u
   ocaml_intrinsics_kernel ppx_bench.runtime-lib ppx_expect.runtime
   ppx_module_timer.runtime stdio)
 (js_of_ocaml
  (javascript_files test_stubs.js))
 (preprocess
  (pps ppx_jane ppx_optcomp))
 (wasm_of_ocaml
  (javascript_files test_stubs.js)
  (wasm_files test_stubs.wat)))

(rule
 (targets config.h)
 (deps)
 (action
  (bash "cp %{lib:jst-config:config.h} .")))
